--- a/Estilos.css
+++ b/Estilos.css
@@ -187,16 +187,16 @@ button:active {
   background-color: #ffd665;
 }
 .fondodietas2 {
-  background-color: #ff6f65;
+  background-color: #fd8178;
 }
 .fondodietas3 {
-  background-color: #f5ff65;
+  background-color: #f4fc8e;
 }
 .fondohabitos1 {
   background-color: rgb(86, 213, 255);
 }
 .fondosalud1 {
-  background-color: mediumseagreen;
+  background-color: rgb(102, 207, 149);
 }
 
 .txtintroduciondietas {
